Messages OK + Corrections

--- a/app/Resources/views/documents/modal.html.twig
+++ b/app/Resources/views/documents/modal.html.twig
@@ -30,7 +30,7 @@
                                 {% endif %}
                                 <div class="row mb-10">
                                     <div class="LabelAdmin col-sm-3">Destinataires</div>
-                                    <select class="selectpicker col-xs-9" data-style="MyBtnSelectPickeer" title="Aucun sélectionné..." multiple>
+                                    <select class="selectpicker col-xs-9" data-style="MyBtnSelectPickeer" title="Aucun sélectionné..." multiple data-live-search="true">
                                         <option title="Tous les inscrits" value="0" class="allSelected">Tous</option>
                                         <option data-divider="true"></option>
                                         {% for key,val in users %}
