--- a/app/Resources/views/discipline/myCourses.html.twig
+++ b/app/Resources/views/discipline/myCourses.html.twig
@@ -87,22 +87,41 @@
                                                 </div>
                                             </div>
                                         {% endif %}
-                                        {% for keyC,valC in val.sessions %}
-                                            <div class="course-list course-session" style="margin-top: 0;">
-                                                <div class="course-media">
-                                                    <img src="{{ asset('images/') }}{{ valC.imgFilePath }}" class="img-responsive course-img" alt="">
+                                        {% if val.sessions is defined %}
+                                            {% for keyC,valC in val.sessions %}
+                                                <div class="course-list course-session" style="margin-top: 0;">
+                                                    <div class="course-media">
+                                                        <img src="{{ asset('images/') }}{{ valC.imgFilePath }}" class="img-responsive course-img" alt="">
+                                                    </div>
+                                                    <div class="course-detail">
+                                                        <h4 class="heading">{{ valC.nom }}</h4>
+                                                        <ul class="course-features">
+                                                            <li><i class="fa fa-map-marker"></i> À distance</li>
+                                                            <li><i class="fa fa-clock-o"></i> Fin : le {{ valC.session.dateFin|localizeddate('none', 'none', null, null, 'd LLLL Y' ) }}</li>
+                                                        </ul>
+                                                        <p class="brief">{{ valC.description }}</p>
+                                                        <a href="{{ path('oneCours', {id: valC.id, mode: 'etu'}) }}" class="btn btn-primary btn-sm">Entrer</a>
+                                                    </div>
                                                 </div>
-                                                <div class="course-detail">
-                                                    <h4 class="heading">{{ valC.nom }}</h4>
-                                                    <ul class="course-features">
-                                                        <li><i class="fa fa-map-marker"></i> À distance</li>
-                                                        <li><i class="fa fa-clock-o"></i> 2 mois</li>
-                                                    </ul>
-                                                    <p class="brief">{{ valC.description }}</p>
-                                                    <a href="{{ path('oneCours', {id: valC.id, mode: 'etu'}) }}" class="btn btn-primary btn-sm">Entrer</a>
+                                            {% endfor %}
+                                        {% endif %}
+                                        {% if val.sessionsAlerte is defined %}
+                                            {% for keyC,valC in val.sessionsAlerte %}
+                                                <div class="course-list course-sessionAlerte" style="margin-top: 0;">
+                                                    <div class="course-media">
+                                                        <img src="{{ asset('images/') }}{{ valC.imgFilePath }}" class="img-responsive course-img" alt="">
+                                                    </div>
+                                                    <div class="course-detail">
+                                                        <h4 class="heading">{{ valC.nom }}</h4>
+                                                        <ul class="course-features">
+                                                            <li><i class="fa fa-map-marker"></i> À distance</li>
+                                                            <li><i class="fa fa-clock-o"></i> Début : le {{ valC.dateDebut|localizeddate('none', 'none', null, null, 'd LLLL Y' ) }}</li>
+                                                        </ul>
+                                                        <p class="brief">{{ valC.messageAlerte }}</p>
+                                                    </div>
                                                 </div>
-                                            </div>
-                                        {% endfor %}
+                                            {% endfor %}
+                                        {% endif %}
                                         {% for keyC,valC in val.courses %}
                                             <div class="course-list" style="margin-top: 0;">
                                                 <div class="course-media">
