--- a/app/Resources/views/calendrier.html.twig
+++ b/app/Resources/views/calendrier.html.twig
@@ -58,6 +58,8 @@
                     myNewEvent["color"] = "#00A0D1";
                 }else if(type == "userEvt"){
                     myNewEvent["color"] = "#9179ef";
+                }else if(type == "sessionEvt"){
+                    myNewEvent["color"] = "#ff9c00";
                 }
 
                 events.push(myNewEvent);
