--- a/app/Resources/views/adminCKedit.html.twig
+++ b/app/Resources/views/adminCKedit.html.twig
@@ -3,9 +3,8 @@
 {% block javascripts %}
     {{ parent() }}
     <script src="//cdn.ckeditor.com/4.5.0/standard/ckeditor.js"></script>
-    <script type="text/javascript">
-        $(function() {
-            $('textarea.ckeditor').ckeditor();
-        });
+    <script>
+        CKEDITOR.config.entities = false;
+        CKEDITOR.config.entities_latin = false;
     </script>
 {% endblock %}
