--- a/app/Resources/views/discipline/myCourses.html.twig
+++ b/app/Resources/views/discipline/myCourses.html.twig
@@ -35,6 +35,24 @@
                     }
                 });
             });
+
+            $('.btnInscrSess').click(function(){
+                var btn = $(this);
+                var block = btn.closest('[data-idSession]');
+                var id = block.attr('data-idSession');
+                $.ajax({
+                    type: "POST",
+                    url: "{{path('inscrSess_ajax')}}",
+                    data: {
+                        id: id
+                    },
+                    dataType: "json",
+                    success: function (response) {
+                        btn.remove();
+                        block.find('.fdbackInscUserSess').removeClass('hidden');
+                    }
+                });
+            });
         });
     </script>
     <div class="container mt-140">
@@ -97,7 +115,16 @@
                                                         <h4 class="heading">{{ valC.nom }}</h4>
                                                         <ul class="course-features">
                                                             <li><i class="fa fa-map-marker"></i> À distance</li>
-                                                            <li><i class="fa fa-clock-o"></i> Fin : le {{ valC.session.dateFin|localizeddate('none', 'none', null, null, 'd LLLL Y' ) }}</li>
+                                                            <br/>
+                                                            {% if app.user.hasRole('ROLE_SUPER_ADMIN') %}
+                                                                <li><i class="fa fa-hourglass-start"></i> {{ valC.session.dateDebut|localizeddate('none', 'none', null, null, 'd LLLL Y' ) }}</li>
+                                                            {% endif %}
+                                                            <li><i class="fa fa-hourglass-end"></i> {{ valC.session.dateFin|localizeddate('none', 'none', null, null, 'd LLLL Y' ) }}</li>
+                                                            {% if app.user.hasRole('ROLE_SUPER_ADMIN') %}
+                                                                <br/>
+                                                                <li><i class="fa fa-bell-o" aria-hidden="true"></i> {{ valC.session.dateDebutAlerte|localizeddate('none', 'none', null, null, 'd LLLL Y' ) }}</li>
+                                                                <li><i class="fa fa-bell-slash-o" aria-hidden="true"></i> {{ valC.session.dateFinAlerte|localizeddate('none', 'none', null, null, 'd LLLL Y' ) }}</li>
+                                                            {% endif %}
                                                         </ul>
                                                         <p class="brief">{{ valC.description }}</p>
                                                         <a href="{{ path('oneCours', {id: valC.id, mode: 'etu'}) }}" class="btn btn-primary btn-sm">Entrer</a>
@@ -107,7 +134,7 @@
                                         {% endif %}
                                         {% if val.sessionsAlerte is defined %}
                                             {% for keyC,valC in val.sessionsAlerte %}
-                                                <div class="course-list course-sessionAlerte" style="margin-top: 0;">
+                                                <div class="course-list course-sessionAlerte" data-idSession="{{ valC.id }}" style="margin-top: 0;">
                                                     <div class="course-media">
                                                         <img src="{{ asset('images/') }}{{ valC.imgFilePath }}" class="img-responsive course-img" alt="">
                                                     </div>
@@ -115,9 +142,14 @@
                                                         <h4 class="heading">{{ valC.nom }}</h4>
                                                         <ul class="course-features">
                                                             <li><i class="fa fa-map-marker"></i> À distance</li>
-                                                            <li><i class="fa fa-clock-o"></i> Début : le {{ valC.dateDebut|localizeddate('none', 'none', null, null, 'd LLLL Y' ) }}</li>
+                                                            <br/>
+                                                            <li><i class="fa fa-hourglass-start"></i> {{ valC.dateDebut|localizeddate('none', 'none', null, null, 'd LLLL Y' ) }}</li>
                                                         </ul>
                                                         <p class="brief">{{ valC.messageAlerte }}</p>
+                                                        <p class="brief fdbackInscUserSess{% if not val.sessionsAlerteIsInscrit[keyC] %} hidden{% endif %}">Vous êtes inscrit à cette future session.</p>
+                                                        {% if not val.sessionsAlerteIsInscrit[keyC] %}
+                                                            <a class="btn btn-warning btn-sm btnInscrSess">S'inscrire</a>
+                                                        {% endif %}
                                                     </div>
                                                 </div>
                                             {% endfor %}
