--- a/app/Resources/views/messagerie.html.twig
+++ b/app/Resources/views/messagerie.html.twig
@@ -27,6 +27,9 @@
 
             var forceAllUsers = false;
 
+            CKEDITOR.config.entities = false;
+            CKEDITOR.config.entities_latin = false;
+
             var config = {
                 configname:"lightConfig",
                 toolbar:
