--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -77,7 +77,7 @@
     {% endblock %}
 
 </head>
-<body>
+<body class="bgcolor3">
 
 <div class="loader-backdrop">           <!-- Loader -->
     <div class="loader">
