--- a/app/Resources/views/documents/byCours.html.twig
+++ b/app/Resources/views/documents/byCours.html.twig
@@ -8,7 +8,7 @@
                 <li class="color3">
                     <a href="{{ path('myCourses') }}" class="label label-info">{{ cours.discipline.nom }}</a>
                     >
-                    <a href="{{ path('oneCours', {id: cours.id, mode: 'ens'}) }}" class="label label-info">{{ cours.nom }}</a>
+                    <a href="{{ path('oneCours', {id: cours.id, mode: 'etu'}) }}" class="label label-info">{{ cours.nom }}</a>
 
                 </li>
             </ul>
